# draftgap

./: .env.example  .eslintrc.json  .gitignore  AGENTS.md  DEBUG.md  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tsconfig.json  turbo.json  vite.config.ts
.github/workflows/: dataset.yml  release.yml
apps/dataset/: .env.example  package.json  tsconfig.json
apps/frontend/: .env.example  eslint.config.mjs  index.html  package.json  tailwind.config.js  tsconfig.json
apps/frontend/src-tauri/: Cargo.toml  tauri.conf.json
apps/frontend/src-tauri/capabilities/: desktop.json  migrated.json
apps/frontend/src-tauri/src/: main.rs
prisma/: schema.prisma
public/data/: dataset.json
python/: test.ipynb
scripts/: benchmarkSerialization.ts  bump-version.ts  bumpVersion.ts  getData.ts  publishTauriUpdate.ts  updateData.ts
src/: App.tsx  index.css  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/api/: lcu-api.ts
src/components/: CountUp.tsx  DamageDistributionBar.tsx  DraftTable.tsx  DraftTableRow.tsx  LolClientStatusBadge.tsx  OptionsMenu.tsx  OptionsPopover.tsx  Pick.tsx  PickOptions.tsx  RoleFilter.tsx  Search.tsx  SettingsModal.tsx  TeamSelector.tsx  TeamSidebar.tsx  UpdateModal.tsx
src/composables/: use-dnd.ts  use-title.ts
src/context/: BuildContext.tsx  ConfigContext.tsx  DraftAnalysisContext.tsx  DraftContext.tsx  DraftSuggestionsContext.tsx  LolClientContext.tsx  TooltipContext.tsx
src/contexts/: BuildContext.tsx  DatasetContext.tsx  (+4 more)
(+264 files in other folders)
